# nbaio

./: README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
nbaio/: __init__.py  cli.py  ui.py  util.py
tests/: test_nbaio.py  test_util.py
